--- a/LR2/LAB2.ipynb
+++ b/LR2/LAB2.ipynb
@@ -1485,11 +1485,18 @@
   }
  ],
  "metadata": {
+  "authors": [
+   {
+    "name": "Зубаиров Валерий Альбертович"
+   }
+  ],
+  "group": "ИУ5-24М",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
+  "lab_number": 2,
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -1501,7 +1508,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
-  }
+  },
+  "title": "Изучение библиотек обработки данных"
  },
  "nbformat": 4,
  "nbformat_minor": 2
