--- a/LR4/Lab4.ipynb
+++ b/LR4/Lab4.ipynb
@@ -1703,11 +1703,18 @@
   }
  ],
  "metadata": {
+  "authors": [
+   {
+    "name": "Зубаиров Валерий Альбертович"
+   }
+  ],
+  "group": "ИУ5-24М",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
+  "lab_number": 4,
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -1718,8 +1725,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
-  }
+   "version": "3.7.7"
+  },
+  "title": "Подготовка обучающей и тестовой выборки, кросс-валидация и подбор гиперпараметров на примере метода ближайших соседей."
  },
  "nbformat": 4,
  "nbformat_minor": 4
